--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   - make
 
 after_success:
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
   - docker push jaschweder/websocket;
